--- a/capstone_v2/templates/base.html
+++ b/capstone_v2/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,27 +7,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dog Adventure Blog</title>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600&family=Outfit:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/css/main.css">
 </head>
     <body>
         <header>
             <h1><a href="{% url 'home' %}">On Floof</a></h1>
-
-            <div class="nav">
-                <a href="{% url 'home' %}">Blog</a>
-                <div class="subject-nav">
-                    <a href="{% url 'home' %}">Hiking</a>
-                    <a href="{% url 'home' %}">Cycling</a>
-                    <a href="{% url 'home' %}">Mushing</a>  
-                </div>
-                <a href="{% url 'home' %}">Adopt</a>
-                <a href="{% url 'home' %}">About</a>
-                <a href="{% url 'home' %}">Contact</a>
-            </div>
         </header>
-        <div class="main-container">
-            {% block content %} 
-            {% endblock content %}
-        </div>
+
+        <main>
+            <div class="nav">
+                <div>
+                    <a href="{% url 'home' %}">Home</a>
+                </div>
+                <div>
+                    <a href="{% url 'home' %}">Adopt</a>
+                </div>
+                <div>
+                    <a href="{% url 'home' %}">About</a>
+                </div>
+                <div>
+                    <a href="{% url 'home' %}">Contact</a> 
+                </div>   
+            </div>
+            
+            <div class="main-container" id="app">
+                {% block content %} 
+                {% endblock content %}
+            </div>
+        </main>
+        <footer>
+            <h3>On Floof &copy;</h3>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="{% static 'javascript/app.js' %}"></script>
     </body>
 </html>
