--- a/capstone_v2/templates/home.html
+++ b/capstone_v2/templates/home.html
@@ -2,6 +2,26 @@
 
 {% block content %}
 
+<h2>6 Most Recent Posts</h2>
+<h3>Topics</h3>
 
+<div class="subject-nav">
+    <div>
+        <a href="{% url 'home' %}">Hiking</a>
+    </div>
+    <div>
+        <a href="{% url 'home' %}">Cycling</a>
+    </div>
+    <div>
+        <a href="{% url 'home' %}">Mushing</a>
+    </div>
+</div>
 
+<div v-for="post in postsList" :key="post.id" class="post-preview">
+    <a href="{% url 'home' %}">
+        <h3>[[ post.title ]]</h3>
+        <em>Created: [[ post.created ]]</em>
+    </a>
+</div>
+    
 {% endblock content %}
