--- a/capstone_v2/templates/base.html
+++ b/capstone_v2/templates/base.html
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dog Adventure Blog</title>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600&family=Outfit:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Inter:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/css/main.css">
 </head>
     <body>
@@ -18,7 +21,7 @@
         <main>
             <div class="nav">
                 <div>
-                    <a href="{% url 'home' %}">Home</a>
+                    <a href="{% url 'home' %}">Blog</a>
                 </div>
                 <div>
                     <a href="{% url 'home' %}">Adopt</a>
@@ -31,7 +34,7 @@
                 </div>   
             </div>
             
-            <div class="main-container" id="app">
+            <div class="header-main-container" id="app">
                 {% block content %} 
                 {% endblock content %}
             </div>
