--- a/capstone_v2/static/css/main.css
+++ b/capstone_v2/static/css/main.css
@@ -13,19 +13,29 @@ body {
     font-size: 1.5em;
     line-height: 1.25em;
     font-family: 'Inter', sans-serif;
+    background-color: #212120;
     /* background-color: rgba(45, 37, 39, 0.799) ; */
-    background-color: rgb(244, 241, 240);
-    color: rgb(39, 39, 40);
 }
 
 header {
     display: flex;
     flex-flow: column nowrap;
-    padding: 2em;
+    padding: 1em;
+    width: 100%;
+    background-color: #212120;
+}
+
+.main {
+    padding: 0em;
+    margin: 0em;
+}
+
+.main-image {
+    display: none;
 }
 
 footer {
-    background-color:#e93354;
+    background-color: #212120;
     padding: 2em;
     margin: 0em;
 }
@@ -38,20 +48,22 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
-h1, h2 {
+h1 {
     font-family: 'Fredoka One', cursive;
 }
 
 h1 a{
-    font-size: 1.75em;
+    font-size: 1.55em;
+    line-height: .5em;
     text-decoration: none;
+    color: #2a8c7ad1;
+    text-shadow: -.035em 0 #212120, 0 .035em #212120, .035em 0 #212120, 0 -.035em #212120;
 }
 
 .nav {
     display: flex;
     flex-flow: column nowrap;
     width: 100%;
-    background-color: rgba(216, 223, 227, 0.51);
     padding: 1em;
 }
 
@@ -59,27 +71,30 @@ h1 a{
     padding: 1em;
 }
 
-/* .subject {
-    display: none;
-} */
-
 .nav a {
-    color: #e93354;
+    color: rgba(216, 223, 227, 0.51);
     font-size: 1.5em;
-    text-decoration-color: white;
+    text-decoration: none;
 }
 
-.nav a:hover {
-    color: #3B9ABF;
+.nav div a:hover {
+    color: rgb(250, 250, 250) .105em;
+    transition: all ease-in-out 500ms;
 }
+/* this is NOT WORKING, WHY??? */
 
 .header-main-container {
     width: 100%;
+    margin: 0em;
+}
+
+.home-container {
+    background-color: #212120;
+    color: whitesmoke;
 }
 
 .blog-header {
     width: 100%;
-    background-color:#e93354;
     margin: 0em;
     padding: 1em;
 }
@@ -95,37 +110,121 @@ h1 a{
 }
 
 .post-preview {
-    background-color: rgba(216, 223, 227, 0.51);
+    background-color: #2d2d2b;
     padding: 1em;
     margin: 1em 0em;
+    width: inherit;
+    max-width: 100vw;
+}
+
+.post-preview img {
+    object-fit: scale-down;
 }
 
 @media (min-width: 700px) {
 
+    header {
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        position: fixed;
+        top: 0;
+        padding: 0em;
+        height: 2em;
+        z-index: 1;
+    }
+
+    .title {
+        width: fit-content;
+        padding: .5em 0em .5em 1.65em;
+        margin: 0em;
+        /* font-size: 1.15em; */
+        font-size: .75em;
+        line-height: .65em;
+    }
+
+    .main-image {
+        display: flex;
+        height: auto;
+        width: 100vw;
+        max-width: 100%;
+        padding: 0em;
+        color:#2e2f31;
+    }
+
+    .main-image img {
+        object-fit: scale-down;
+        overflow: hidden;
+    }
+
+    .image-message h2 {
+        display: none;
+    }
+
+    .subject-nav {
+        display: none;
+    }
+
     .nav {
         flex-flow: row nowrap;
+        width: fit-content;
+        padding: 0em 1em 0em 0em;
+    }
+
+    .nav div {
+        padding: .37em .25em .5em .25em;
+        margin: 0em;
+    }
+
+    .nav a {
+        font-size: 1em;
+    }
+
+    .header-main-container {
+        margin: 2em 0em 0em 0em;
     }
 
 }
 
-@media (min-width: 1100px) {
-    
-    main {
+@media (min-width: 1200px) {
+
+    .image-message {
+        position: absolute;
+        top: 3.5em;
+        left: 3.5em;
+    }
+
+    .image-message h2 {
+        display: contents;
+    }
+
+   .subject-nav {
         display: flex;
         flex-flow: row nowrap;
-    }
+        margin-top: .5em;
+        justify-content:space-between;
+   }
 
-    header {
-        width: 100%
-    }
+   .subject-nav div {
+    padding: .25em;
+    border-radius: .5em;
+    border: solid rgba(223, 159, 81, 0.818) .105em;
+    background-color: rgba(223, 159, 81, 0.581);
+   }
 
-    .nav {
-        flex-flow: column nowrap;
-        width: 25%;
-    }
+   .subject-nav div:hover {
+    border: solid rgba(245, 233, 218, 0.818) .105em;
+    background-color: rgba(223, 178, 124, 0.581);
+    transition: all ease-in-out 500ms;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+   }
 
-    .main-container {
-        width: 100%;
-        padding: 1em 2em 0em 1em;
-    }
+   .subject-nav div a {
+    color:#212120;
+    text-decoration: none;
+   }
+
+   .main-container {
+        margin: 0em auto 0em auto;
+        width: 70%;
+   }
 }
