--- a/capstone_v2/static/css/main.css
+++ b/capstone_v2/static/css/main.css
@@ -40,10 +40,6 @@ footer {
     margin: 0em;
 }
 
-footer h3 {
-    color: aliceblue;
-}
-
 h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
@@ -58,6 +54,16 @@ h1 a{
     text-decoration: none;
     color: #2a8c7ad1;
     text-shadow: -.035em 0 #212120, 0 .035em #212120, .035em 0 #212120, 0 -.035em #212120;
+}
+
+.main-container h2 {
+    color:#51b7a4d1;
+}
+
+footer h3 {
+    color:#2a8c7ad1;
+    font-family: 'Fredoka One', cursive;
+    font-size: 1.5em;
 }
 
 .nav {
@@ -90,7 +96,7 @@ h1 a{
 
 .home-container {
     background-color: #212120;
-    color: whitesmoke;
+    color: rgb(240, 239, 221);
 }
 
 .blog-header {
@@ -110,15 +116,29 @@ h1 a{
 }
 
 .post-preview {
+    display: flex;
+    flex-flow: column nowrap;
     background-color: #2d2d2b;
     padding: 1em;
     margin: 1em 0em;
-    width: inherit;
-    max-width: 100vw;
+    width: 100%;
+    height:fit-content;
+    color: rgb(240, 239, 221);
+    text-decoration: none;
 }
 
 .post-preview img {
     object-fit: scale-down;
+    max-width: 100%;
+}
+
+.preview-text-container {
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+.preview-text {
+    display: none;
 }
 
 @media (min-width: 700px) {
@@ -181,6 +201,25 @@ h1 a{
 
     .header-main-container {
         margin: 2em 0em 0em 0em;
+    }
+
+    .post-preview {
+        display: flex;
+        flex-flow: row nowrap;
+        width: 100%;
+    }
+
+    .post-preview img {
+        width: 33.33%;
+    }
+
+    .preview-text-container {
+        width: 66.66%;
+        padding: 0em 0em 0em 1em;
+    }
+
+    .preview-text {
+        display: contents;
     }
 
 }
