--- a/capstone_v2/templates/home.html
+++ b/capstone_v2/templates/home.html
@@ -25,13 +25,15 @@
         <div class="blog-header">
             <h2>Recent Posts</h2>
         </div>
-        <div v-for="post in postsList" :key="post.id" class="post-preview">
-            <a href="{% url 'home' %}">
-                <img :src="[[ post.previewImage ]]" alt="preview image for a blog post">
+        <a href="{% url 'home' %}" v-for="post in postsList" :key="post.id" class="post-preview">
+            <img :src="[[ post.previewImage ]]" alt="preview image for a blog post">
+            <div class="preview-text-container">
                 <h3>[[ post.title ]]</h3>
-                <em>Created: [[ post.created ]]</em>
-            </a>
-        </div>
+                <p><em>Created: [[ post.created ]]</em></p>
+                <p class="preview-text">[[ post.previewText ]]...</p>
+            </div>
+        </a>
+        
     </div>
 </div>
     
