all urls and templates created, began working on templates for individual pages

--- a/capstone_v2/templates/base-adopt.html
+++ b/capstone_v2/templates/base-adopt.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Adventure Blog</title>
+    <title>Adventure Dog Finder, Adoption Tool</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
 
         <main>
             
-            <div class="header-main-container" id="app">
+            <div class="header-main-container" id="adopt">
                 {% block content %} 
                 {% endblock content %}
             </div>
@@ -43,8 +43,9 @@
         <footer>
             <h3>On Floof &copy;</h3>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-        <script src="{% static 'javascript/app.js' %}"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="https://unpkg.com/@petfinder/petfinder-js/dist/petfinder.min.js"></script>
+        <script src="{% static 'javascript/adopt.js' %}"></script>
     </body>
 </html>
