--- a/capstone_v2/templates/mush.html
+++ b/capstone_v2/templates/mush.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-<div class="home-container">
+<div class="home-container" id="app">
     <div class="main-image">
         <img src="../static/images/main-wide.jpg/" alt="Two huskies hiking in the Rocky mountains in Colorado">
         <div class="image-message">
-            <h2>Anything you can do,<br>they can too.</h2>
+            <h2>Mushing</h2>
             <div class="subject-nav">
                 <div>
                     <a href="{% url 'hike' %}">Hiking</a>
@@ -23,7 +23,7 @@
 
     <div class="main-container">
         <div class="blog-header">
-            <h2>Recent Posts</h2>
+            <h2>Recent Mushing Posts</h2>
         </div>
         <a href="{% url 'home' %}" v-for="post in postsList" :key="post.id" class="post-preview">
             <img :src="[[ post.previewImage ]]" alt="preview image for a blog post">
