for gage to look at

--- a/capstone_v2/static/css/adopt.css
+++ b/capstone_v2/static/css/adopt.css
@@ -5,9 +5,13 @@
     max-width: 100vw;
 }
 
-.header-img-container {
+/* .header-img-container {
     display: none;
-}
+} */
+
+/* .adopt-img {
+    display: none;
+} */
 
 .adopt-container {
     color:rgb(240, 239, 221);
@@ -118,17 +122,22 @@
 
 @media (min-width: 750px) {
 
-    .header-img-container {
-        display: contents;
+    /* .header-img-container {
+        display: flex;
         height: auto;
         width: 100%;
         max-width: 100vw;
         padding: 0em;
         /* color:#2e2f31; */
-    }
+    /* }  */
 
-    .header-img-container img{
+    .adopt-img {
+        display: contents;
+        width: 100%;
         object-fit: scale-down;
+        height: auto;
+        max-width: 100vw;
+        padding: 0em;
     }
 
     .activity-container {
@@ -162,12 +171,16 @@
         flex-flow: row nowrap;
     }
 
-    .header-img-container {
+    /* .header-img-container {
         width: 60vw;
+    } */
+
+    .adopt-img {
+        width: 50vw;
     }
 
     .adopt-header-text {
-        width: 40vw;
+        width: 40%;
     }
 
     .all-dog-cards-container {
