--- a/capstone_v2/templates/adopt.html
+++ b/capstone_v2/templates/adopt.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" href="../static/css/adopt.css">
 
 <div class="adopt-header">
-    <div class="header-img-container">
-        <img src="../static/images/main-wide.jpg/" alt="Two huskies hiking in the Rocky mountains in Colorado">
-    </div>
+    <!-- <div class="header-img-container"> -->
+        <img src="../static/images/main-wide.jpg/" alt="Two huskies hiking in the Rocky mountains in Colorado" class="adopt-img">
+    <!-- </div> -->
     <div class="adopt-header-text">
         <h2>Discover your adventure dog!</h2>
         <p>Create written description here of what the adoption tool does and how to use it + why someone should use it</p>
