--- a/capstone_v2/templates/base.html
+++ b/capstone_v2/templates/base.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../static/css/main.css">
 </head>
     <body>
+        {% csrf_token %}
         <header>
             <h1 class="title"><a href="{% url 'home' %}">On <br>Floof</a></h1>
             <div class="nav">
