--- a/capstone_v2/templates/home.html
+++ b/capstone_v2/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="home-container">
+<div class="home-container" id="app">
     <div class="main-image">
         <img src="../static/images/main-wide.jpg/" alt="Two huskies hiking in the Rocky mountains in Colorado">
         <div class="image-message">
@@ -25,14 +25,16 @@
         <div class="blog-header">
             <h2>Recent Posts</h2>
         </div>
-        <a href="{% url 'home' %}" v-for="post in postsList" :key="post.id" class="post-preview">
-            <img :src="[[ post.previewImage ]]" alt="preview image for a blog post">
-            <div class="preview-text-container">
-                <h3>[[ post.title ]]</h3>
-                <p><em>Created: [[ post.created ]]</em></p>
-                <p class="preview-text">[[ post.previewText ]]...</p>
-            </div>
-        </a>
+        <div v-for="post in postsList" :key="post.id">
+            <a :href="`/${post.id}/`" class="post-preview">
+                <img :src="[[ post.previewImage ]]" alt="preview image for a blog post">
+                <div class="preview-text-container">
+                    <h3>[[ post.title ]]</h3>
+                    <p><em>Created: [[ post.created ]]</em></p>
+                    <p class="preview-text">[[ post.previewText ]]...</p>
+                </div>
+            </a>
+        </div>
         
     </div>
 </div>
