--- a/capstone_v2/templates/mush.html
+++ b/capstone_v2/templates/mush.html
@@ -26,7 +26,8 @@
             <h2>Recent Mushing Posts</h2>
         </div>
         <div v-for="post in mushList">
-            <a href="{% url 'home' %}" class="post-preview">
+            <a href="`/${post.id}/`" class="post-preview">
+                <img :src="[[ post.previewImage ]]" alt="preview image for a blog post">
                 <div class="preview-text-container">
                     <h3>[[ post.title ]]</h3>
                     <p><em>Created: [[ post.created ]]</em></p>
